<resources>
    <string name="app_name" translatable="false">Sprintfield</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email\n</string>
    <string name="all_in_one_project_management_application">Sprintfield is an all-in-one project management application. It\'s easy to use for planning any agile project, allowing easy task management, and issue creation.</string>
    <string name="reg_text">Register today for free, or register using your enterprise credentials to access your workplace management system</string>
    <string name="register">Register</string>
    <string name="password_again">Password again</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="existing_account">Already have an account?</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="sprints">Sprints</string>
    <string name="projects">Projects</string>
    <string name="teams">Teams</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="quick_menu">Quick Menu</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in_as">Logged in as: %1$s</string>
    <string name="signed_in">Login successful</string>
    <string name="login_failed">Wrong email or password</string>
    <string name="fill_out">Please fill out all fields</string>
    <string name="pass_no_match">Passwords do not match!</string>
    <string name="small_password">Password must be at least 6 characters long</string>
    <string name="reg_success">Registered successfully!</string>
    <string name="reg_failed">Signup failed: %1$s</string>
    <string name="add_issue">Add Issue</string>
    <string name="close_task">Close Task</string>
    <string name="issues">Issues</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="description">Description</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="time_estimate_e_g_5_hrs">Time Estimate (e.g., 5 hrs)</string>
    <string name="task_urgency">Task Urgency</string>
    <string name="issue_title">Issue Title</string>
    <string name="issue_description">Issue Description</string>
    <string name="estimated">%1$s • Estimated: %2$s</string>
    <string name="sprint_s">%1$d sprint(s)</string>
    <string name="no_project">No project to select</string>
    <string name="no_sprint">No sprint to select</string>
    <string name="failed_sprint_fetch">Failed to fetch sprints: %1$s</string>
    <string name="failed_project_fetch">Failed to fetch projects: %1$s</string>
    <string name="select_project">Select project</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="select_sprint">Select sprint</string>
    <string name="add">Add</string>
    <string name="no_new_sprint_selected">No new sprint selected</string>
    <string name="sprint_connected_to_project">Sprint connected to project</string>
    <string name="failed_project_update">Failed to update project</string>
    <string name="add_new_project">Add new project</string>
    <string name="project_title_cant_be_empty">Project title can\'t be empty</string>
    <string name="project_added">Project added</string>
    <string name="failed_project_adding">Failed to add project: %1$s</string>
    <string name="long_hold_to_edit_or_delete">Long hold %1$s to edit or delete</string>
    <string name="edit_project_name">Edit project name</string>
    <string name="project_updated">Project updated</string>
    <string name="failed_project_delete">Failed to delete project: %1$s</string>
    <string name="delete_project">Delete project</string>
    <string name="are_you_sure_delete">Are you sure you want to delete \"%1$s\"?</string>
    <string name="delete">Delete</string>
    <string name="project_deleted">Project deleted</string>
    <string name="save">Save</string>
    <string name="user_add_failed">Failed to add user to database</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="notifications_status">Notifications %1$s</string>
    <string name="dark_mode_status">Dark mode %1$s</string>
    <string name="settings_reset">Settings reset to default</string>
    <string name="percent_complete">%1$s%% complete</string>
    <string name="failed_to_load_tasks_for_sprint">Failed to load tasks for sprint</string>
    <string name="failed_to_load_tasks">Failed to load tasks</string>
    <string name="complete">%1$s% complete</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="end_after_start">End date must be after start date</string>
    <string name="added_sprint">Sprint added</string>
    <string name="failed_sprint_add">Failed to add sprint</string>
    <string name="overlaps">Sprint overlaps with other sprint</string>
    <string name="new_sprint">New sprint</string>
    <string name="estimated_time_par">Estimated Time: %1$s</string>
    <string name="task_updated">Task updated</string>
    <string name="task_failed_update">Task update failed: %1$s</string>
    <string name="new_issue">Add new issue</string>
    <string name="issue_added">Issue added</string>
    <string name="issue_failed_added">Failed to add issue: %1$s</string>
    <string name="issue_failed_load">Failed to load issues: %1$s</string>
    <string name="edit_issue">Edit issue</string>
    <string name="issue_updated">Issue updated</string>
    <string name="issue_failed_update">Failed to update issue: %1$s</string>
    <string name="delete_issue">Delete issue</string>
    <string name="issue_deleted">Issue deleted</string>
    <string name="delete_failed">Delete failed: %1$s</string>
    <string name="no_issues_reported">No issues reported</string>
    <string name="task_reopened">Task reopened</string>
    <string name="task_closed">Task closed</string>
    <string name="member_s">%1$d member(s)</string>
    <string name="failed_load_teams">Failed to load teams: %1$s</string>
    <string name="add_team">Add team</string>
    <string name="team_name_empty">Team name cannot be empty</string>
    <string name="team_added">Team added</string>
    <string name="edit_team_name">Edit team name</string>
    <string name="team_updated">Team updated</string>
    <string name="delete_team">Delete team</string>
    <string name="team_deleted">Team deleted</string>
    <string name="team_details">Team details</string>
    <string name="add_member">Add member</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="user_not_found">User with this email not found</string>
    <string name="invalid_user_data">Invalid user data</string>
    <string name="user_added_to_team">User added to team</string>
    <string name="project_title">Project Title</string>
    <string name="sprint_title">Sprint Title</string>
    <string name="enter_sprint_title">Enter sprint title</string>
    <string name="start_date">Start Date</string>
    <string name="select_start_date">Select start date</string>
    <string name="end_date">End Date</string>
    <string name="select_end_date">Select end date</string>
    <string name="select_tasks">Select Tasks</string>
    <string name="team_name">Team Name</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="user_email">User email</string>
    <string name="title">Title</string>
    <string name="urgency">Urgency</string>
    <string name="descriptionn">Description</string>
    <string name="estimated_timee">Estimated Time</string>
    <string name="team_namee">Team Name</string>
    <string name="members">Members:</string>
    <string name="add_user_by_email">Add user by email</string>
    <string name="add_project">Add Project</string>
    <string name="add_sprint_to_project">Add Sprint to Project</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="current_sprint">Current Sprint</string>
    <string name="past_sprints">Past Sprints</string>
    <string name="back">Back</string>
    <string name="edit_task">Edit Task</string>
    <string name="close">Close</string>
    <string name="add_task">Add task</string>
    <string name="edit">Edit</string>
</resources>