<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/taskTitleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/taskUrgencyEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/urgency" />

    <EditText
        android:id="@+id/taskDescriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionn" />

    <EditText
        android:id="@+id/taskTimeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estimated_timee" />

    <ProgressBar
        android:id="@+id/editTaskProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleSmall" />
</LinearLayout>
