<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/teamNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/team_name"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/membersLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="4dp"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/userEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_user_by_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="12dp"/>

</LinearLayout>
